switched to fastapi backend and pydantic_ai

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,32 @@
 annotated-types==0.7.0
+anthropic==0.52.1
 anyio==4.9.0
+argcomplete==3.6.2
 Authlib==1.5.2
+boto3==1.38.27
+botocore==1.38.27
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
+cohere==5.15.0
+colorama==0.4.6
 cryptography==44.0.3
 Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.7.0
 docstring_parser==0.16
+email_validator==2.2.0
+eval_type_backport==0.2.2
+fasta2a==0.2.4
 fastapi==0.115.12
+fastapi-cli==0.0.7
+fastavro==1.11.1
+filelock==3.18.0
+fsspec==2025.5.1
 google-adk==0.4.0
+google-ai-generativelanguage==0.6.15
 google-api-core==2.24.2
 google-api-python-client==2.169.0
 google-auth==2.39.0
@@ -25,39 +41,57 @@ google-cloud-storage==2.19.0
 google-cloud-trace==1.16.1
 google-crc32c==1.7.1
 google-genai==1.13.0
+google-generativeai==0.8.5
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 graphviz==0.20.3
 greenlet==3.2.1
+griffe==1.7.3
+groq==0.26.0
 grpc-google-iam-v1==0.14.2
 grpcio==1.71.0
 grpcio-status==1.71.0
 h11==0.16.0
+hf-xet==1.1.2
 httpcore==1.0.9
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
 httpx-ws==0.7.2
+huggingface-hub==0.32.3
 idna==3.10
 importlib_metadata==8.6.1
+Jinja2==3.1.6
+jiter==0.10.0
+jmespath==1.0.1
 lmstudio==1.3.0
+logfire-api==3.16.1
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 mcp==1.7.1
 mdurl==0.1.2
+mistralai==1.8.1
 msgspec==0.19.0
 numpy==2.2.5
+openai==1.82.1
 opentelemetry-api==1.32.1
 opentelemetry-exporter-gcp-trace==1.9.0
 opentelemetry-resourcedetector-gcp==1.9.0a0
 opentelemetry-sdk==1.32.1
 opentelemetry-semantic-conventions==0.53b1
 packaging==25.0
+prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==5.29.4
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.4
+pydantic-ai==0.2.4
+pydantic-ai-slim==0.2.4
+pydantic-evals==0.2.4
+pydantic-graph==0.2.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
@@ -68,7 +102,9 @@ python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
 rich==14.0.0
+rich-toolkit==0.14.7
 rsa==4.9.1
+s3transfer==0.13.0
 shapely==2.1.0
 shellingham==1.5.4
 six==1.17.0
@@ -76,13 +112,19 @@ sniffio==1.3.1
 SQLAlchemy==2.0.40
 sse-starlette==2.3.4
 starlette==0.46.2
+tokenizers==0.21.1
+tqdm==4.67.1
 typer==0.15.3
+types-requests==2.32.0.20250602
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzlocal==5.3.1
 uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+wcwidth==0.2.13
 websockets==15.0.1
 wrapt==1.17.2
 wsproto==1.2.0
